--- a/src/Template/mixin/pushstream.twig
+++ b/src/Template/mixin/pushstream.twig
@@ -1,26 +1,28 @@
 {# Long poling #}
-<script>
-    {# Background worker #}
-    (function worker(timer = 0) {
-        setTimeout(() => {
-            $.ajax({
-                url: '/sub/all/{{ pushstream_channel(user.level) }}/{{ pushstream_channel(user.uuid) }}',
-                method: 'GET',
-                error: () => timer = +1000,
-                success: (json, state) => {
-                    if (json && state === 'success') {
-                        json = JSON.parse(json);
+{% htmlcompress %}
+    <script>
+        {# Background worker #}
+        (function worker(timer = 0) {
+            setTimeout(() => {
+                $.ajax({
+                    url: '/sub/all/{{ pushstream_channel(user.level) }}/{{ pushstream_channel(user.uuid) }}',
+                    method: 'GET',
+                    error: () => timer = +1000,
+                    success: (json, state) => {
+                        if (json && state === 'success') {
+                            json = JSON.parse(json);
 
-                        if (json.content.type) {
-                            $(window).trigger('event:' + json.content.type, json.content);
+                            if (json.content.type) {
+                                $(window).trigger('event:' + json.content.type, json.content);
+                            }
+                            $(window).trigger('event', json.content);
                         }
-                        $(window).trigger('event', json.content);
-                    }
 
-                    timer = 0;
-                },
-                complete: () => worker(timer),
-            });
-        }, timer || 0);
-    })();
-</script>
+                        timer = 0;
+                    },
+                    complete: () => worker(timer),
+                });
+            }, timer || 0);
+        })();
+    </script>
+{% endhtmlcompress %}
