compress html raw

--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -16,8 +16,10 @@
 
     {% block body %}
         <body>
-            {% block bodyinner '' %}
-            {% block script '' %}
+            {% htmlcompress %}
+                {% block bodyinner '' %}
+                {% block script '' %}
+            {% endhtmlcompress %}
         </body>
     {% endblock %}
 </html>
