--- a/theme/default/catalog.category.product.twig
+++ b/theme/default/catalog.category.product.twig
@@ -3,7 +3,12 @@
         <div class="pi-pic">
             {#<div class="tag-sale">ON SALE</div>#}
             <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}">
-                <img src="{{ product.getFiles().first().getPublicPath('middle') }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
+                {% include 'mixin/img.twig' with {
+                    'src': product.getFiles().first().getPublicPath('middle'),
+                    'title': product.title,
+                    'alt': product.title,
+                    'style': 'max-height: 300px; width: 100%; object-fit: contain; object-position: center center;'
+                } only %}
             </a>
             <div class="pi-links">
                 {# add class item_add to btn #}
