--- a/theme/default/catalog.product.twig
+++ b/theme/default/catalog.product.twig
@@ -43,13 +43,23 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="product-pic-zoom">
-                        <img class="product-big-img" src="{{ product.getFiles().first().getPublicPath() }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
+                        {% include 'mixin/img.twig' with {
+                            'src': product.getFiles().first().getPublicPath('middle'),
+                            'class': 'product-big-img',
+                            'title': product.title,
+                            'alt': product.title,
+                            'style': 'max-height: 300px; width: 100%; object-fit: contain; object-position: center center;'
+                        } only %}
                     </div>
                     <div class="product-thumbs" tabindex="1" style="overflow: hidden; outline: none;">
                         <div class="product-thumbs-track">
                             {% for index, file in product.getFiles() %}
                                 <div class="pt {{ index == 0 ? 'active' : '' }}" data-imgbigurl="{{ file.getPublicPath() }}">
-                                    <img src="{{ file.getPublicPath('small') }}" alt="{{ product.title }} {{ index }}" />
+                                    {% include 'mixin/img.twig' with {
+                                        'src': file.getPublicPath('small'),
+                                        'title': product.title,
+                                        'alt': product.title ~ ' ' ~ index
+                                    } only %}
                                 </div>
                             {% endfor %}
                         </div>
