--- a/theme/default/catalog.product.viewed.twig
+++ b/theme/default/catalog.product.viewed.twig
@@ -15,7 +15,12 @@
                     <div class="product-item" data-catalog-product>
                         <div class="pi-pic">
                             <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}">
-                                <img src="{{ product.getFiles().first().getPublicPath('middle') }}" style="max-height: 300px; width: 100%; object-fit: contain; object-position: center center;" alt="{{ product.title }}">
+                                {% include 'mixin/img.twig' with {
+                                    'src': product.getFiles().first().getPublicPath('middle'),
+                                    'title': product.title,
+                                    'alt': product.title,
+                                    'style': 'max-height: 300px; width: 100%; object-fit: contain; object-position: center center;'
+                                } only %}
                             </a>
                             <div class="pi-links">
                                 <a href="#" class="add-card" data-catalog-product-add><i class="flaticon-bag"></i><span>В корзину</span></a>
