--- a/theme/default/catalog.category.product.twig
+++ b/theme/default/catalog.category.product.twig
@@ -7,7 +7,7 @@
                     'src': product.getFiles().first().getPublicPath('middle'),
                     'title': product.title,
                     'alt': product.title,
-                    'style': 'max-height: 300px; width: 100%; object-fit: contain; object-position: center center;'
+                    'style': 'display:block; height: 300px; width: 100%; object-fit: contain; object-position: center center;'
                 } only %}
             </a>
             <div class="pi-links">
