--- a/theme/default/catalog.product.twig
+++ b/theme/default/catalog.product.twig
@@ -48,7 +48,7 @@
                             'class': 'product-big-img',
                             'title': product.title,
                             'alt': product.title,
-                            'style': 'max-height: 300px; width: 100%; object-fit: contain; object-position: center center;'
+                            'style': 'display:block; height: 300px; width: 100%; object-fit: contain; object-position: center center;'
                         } only %}
                     </div>
                     <div class="product-thumbs" tabindex="1" style="overflow: hidden; outline: none;">
