separate img-lazyload

--- a/src/Template/mixin/img.twig
+++ b/src/Template/mixin/img.twig
@@ -7,64 +7,5 @@
     style - attr style
 #}
 {% htmlcompress %}
-    {% set imgid = random() %}
-
-    <img data-lazyload-image="{{ imgid }}" data-src="{{ src }}" {{ id ? ('id="'~ id|trim ~ '"')|raw : '' }} {{ class ? ('class="'~ class|trim ~'"')|raw : '' }} {{ alt ? ('alt="'~ alt|trim ~'"')|raw : '' }} {{ title ? ('title="'~ title|trim ~'"')|raw : '' }} {{ style ? ('style="'~ style|trim ~'"')|raw : '' }} />
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            switch ('IntersectionObserver' in window) {
-                // IntersectionObserver
-                case true: {
-                    window.images = window.images || new IntersectionObserver(function (entries, observer) {
-                        entries.forEach(entry => {
-                            if (entry.isIntersecting) {
-                                let image = entry.target;
-                                    image.src = image.dataset.src;
-
-                                window.images.unobserve(image);
-                            }
-                        });
-                    });
-                    window.images.observe(document.querySelector('[data-lazyload-image="{{ imgid }}"]'));
-
-                    break;
-                }
-
-                // fallback
-                default: {
-                    let lazyLoadImages = document.querySelectorAll('[data-lazyload-image]'),
-                        lazyLoadThrottleTimeout;
-
-                    function lazyLoad() {
-                        if (lazyLoadThrottleTimeout) {
-                            clearTimeout(lazyLoadThrottleTimeout);
-                        }
-
-                        lazyLoadThrottleTimeout = setTimeout(() => {
-                            let scrollTop = window.pageYOffset;
-
-                            lazyLoadImages.forEach(function (img) {
-                                if (img.offsetTop < (window.innerHeight + scrollTop)) {
-                                    img.src = img.dataset.src;
-                                }
-                            });
-
-                            if (lazyLoadImages.length === 0) {
-                                document.removeEventListener('scroll', lazyLoad);
-                                window.removeEventListener('resize', lazyLoad);
-                                window.removeEventListener('orientationChange', lazyLoad);
-                            }
-                        }, 20);
-                    }
-
-                    document.addEventListener('scroll', lazyLoad);
-                    window.addEventListener('resize', lazyLoad);
-                    window.addEventListener('orientationChange', lazyLoad);
-
-                    break;
-                }
-            }
-        })
-    </script>
+    <img data-lazyload-image data-src="{{ src }}" {{ id ? ('id="'~ id|trim ~ '"')|raw : '' }} {{ class ? ('class="'~ class|trim ~'"')|raw : '' }} {{ alt ? ('alt="'~ alt|trim ~'"')|raw : '' }} {{ title ? ('title="'~ title|trim ~'"')|raw : '' }} {{ style ? ('style="'~ style|trim ~'"')|raw : '' }} />
 {% endhtmlcompress %}
