--- a/src/Template/cup/publication/category/form.twig
+++ b/src/Template/cup/publication/category/form.twig
@@ -69,7 +69,7 @@
                                     'type': 'select',
                                     'name': 'parent',
                                     'args': {
-                                        'option': {'00000000-0000-0000-0000-000000000000': '---'}|merge(list.whereNotIn('uuid', [item.uuid]).pluck('title', 'uuid').all()),
+                                        'option': {NIL: '---'}|merge(list.whereNotIn('uuid', [item.uuid]).pluck('title', 'uuid').all()),
                                         'selected': item.parent
                                     }
                                 } %}
